add buttons, black theme

--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html>
   <head>
     <link rel="stylesheet" href="css/master.css" media="screen" title="no title" charset="utf-8">
+    <script src="js/jquery-3.2.1.js"></script>
+    <script src="js/scripts.js"></script>
     <title>Jimbo's Animal Shelter</title>
   </head>
   <body>
     <h1>Jimbo's Animal Shelter</h1>
     <h3>We have some weird-ass animals for you to take home!</h3>
+    <button type="button" id="dark">Dark theme</button>
+    <button type="button" id="normal">change to normal</button>
+    </br>
     <div class="profile">
       <img src="images/animal1.jpg" alt="Animal" />
       <h3 class="button"><a href= "images/animal1.jpg">Lion!</a></h3>
